regex support in `if` `matches` statement